# spend_categorization

./: .gitignore  .mcp.json  0_data.ipynb  0_eda.ipynb  0_generate.ipynb  0_generate_data.ipynb  1_batch_inference_naive.ipynb  1_eda.ipynb  1_eda_prep.ipynb  1_infrastructure.ipynb  2_batch_inference_naive.ipynb  2_batch_vector_search.ipynb  2_bootstrap.ipynb  2_eda.ipynb  2_pred_naive.ipynb  3_batch_vector_search.ipynb  3_bootstrap.ipynb  3_catboost.ipynb  3_optimize.ipynb  3_optimizer_eval.ipynb  4_catboost.ipynb  4_optimize_eval.ipynb  4_vector_search.ipynb  5_catboost.ipynb  5_vectorsearch.ipynb  6_infrastructure_test.ipynb  6_sync_to_lakebase.ipynb  6_vector_search.ipynb  6_vectorsearch.ipynb  BRANDING.md  DATA_FLOW.md  README.md  STRUCTURE.md  Test Iteration.ipynb  agency_hierarchy.md  app.py  app.yaml  config.yaml  databricks.yml  examples.py  (+7 more)
.ai-dev-kit/: .installed-skills
.claude/: settings.json
assets/: cat_bootstrap.csv  cat_catboost.csv  cat_reviews.csv  cat_vectorsearch.csv  categories.csv  invoices.csv  new_gl_map.xlsx
docs/: PRESENTATION.md
notebooks/: 0_define_taxonomies.ipynb  0_generate.ipynb  1_eda.ipynb  1_ingest.ipynb  2_bootstrap.ipynb  2_index_taxonomies.ipynb  3_classify.ipynb  3_optimize.ipynb  3_train_and_index.ipynb  4_catboost.ipynb  4_review.ipynb  4_train_catboost.ipynb  5_analytics.ipynb  5_review.ipynb  5_vectorsearch.ipynb  6_analytics.ipynb  6_sync_to_lakebase.ipynb  README.md  Test Iteration.ipynb
pages/: 1_Spend_Review.py  2_Analytics.py  3_Comparison.py
resources/: app.yml  jobs.yml
scripts/: deploy.sh
src/: __init__.py  categorize.py  confidence.py  config.py  generate.py  generate_sample_data.py  llm.py  setup_database.py  test_data.py  utils.py  versioning.py
src/agents/: __init__.py  review_agent.py  tools.py
src/app/: __init__.py  config.py  corrections.py  database.py  queries.py  reviews.py  sidebar.py  ui_components.py
src/invoice_app/: __init__.py  config.py  corrections.py  database.py  demo_data.py  queries.py  ui_components.py
src/schemas/: __init__.py  base.py  gl_map.py  three_level.py  unspsc.py
tests/: conftest.py  test_agents.py  test_app_schemas.py  test_config.py  test_database.py  test_generate.py  test_llm.py  test_schemas.py  test_utils.py
