[project]
name = "spend-categorization"
version = "0.1.0"
description = "Invoice spend classification with Databricks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.18.0",
    "mlflow>=3.4",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "openai",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.28.0",
    "plotly>=6.6.0",
]
lakebase = [
    "pgvector",
    "psycopg[binary,pool]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "sqlalchemy>=2.0.0",
    "aiofiles",
]
local = [
    "databricks-connect==16.3.2; python_version >= '3.12'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ipykernel",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
