[project]
name = "spend-categorization"
version = "0.2.5"
description = "Invoice spend classification with Databricks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.18.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "openai",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "src/config.yaml"
"assets/categories.csv" = "src/assets/categories.csv"
"assets/new_gl_map.xlsx" = "src/assets/new_gl_map.xlsx"
# unspsc Excel is 14MB and exceeds Databricks Apps' 10MB upload cap.
# UNSPSC is loaded from the Lakebase synced table at runtime instead.

[project.optional-dependencies]
app = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "pydantic-settings>=2.11.0",
]
lakebase = [
    "pgvector",
    "psycopg[binary,pool]>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
    "sqlalchemy>=2.0.0",
    "aiofiles",
]
local = [
    "databricks-connect==16.3.2; python_version >= '3.12'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ipykernel",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[tool.uv]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
test = [
    "playwright>=1.58.0",
]
